# Cuda_writer

./: .gitignore  README.md  create_sample_data.py  lora.py  setup.py  you
ads_pr/: PROJECT_SUMMARY.md  md.md
ads_pr/fraud_gnn/: CMakeLists.txt  GUIDE.md
ads_pr/fraud_gnn/data/: transactions.csv
ads_pr/fraud_gnn/src/: detector.cpp  detector.h  gnn.cpp  gnn.h  graph.cpp  graph.h  gui.cpp  gui.h  main.cpp  neural_net.cpp  neural_net.h
cuda/: lwd  matmul.cu
day04/: 01  smblock.cu  softmax.cu
day05/: 01  oppmatmul.cu  smblocks.cu
day06/: tile_matmul.cu  tiled_matrix.cu  you
day07/: convlayer.cu  you
day08/: qlora.py
day1/: 01  add.cu  multi.cu
day10/: you
day11/: partialsum.cu
day12/: add.cu  add.py  addadd.cu
day13/: 02-fused-softmax.ipynb  cudasoftmax.cu  softmax.py  you
day14/: matmul.py  matrixmul  matrixmul.cu
day15/: demomatmul.py  layernorm_triton.py  matmul.py
day16/: 04-low-memory-dropout.py  dropout.py  exercise.py  sparse_ji.py
day17 /: falshattention.py  flash2.py
distributed_llm_trainer/: requirements.txt
distributed_llm_trainer/config/: training_config.yaml
distributed_llm_trainer/scripts/: run_training.py
distributed_llm_trainer/tests/: test_basic.py
flashatten/: flash.cu  flash.py
lora_finetune/: lama.ipynb
qlora/: main.ipynb
signal_image_project/code/: build_block_diagram.py  build_ppt.py  build_report.py  dct_compression.py  run_project.py
signal_image_project/outputs/: metrics.csv
signal_image_project/ppt/: IC2306_DCT_Image_Compression_Slides.pptx
torch/: swis_kernal.ipynb  tanh_kernal.ipynb
(+4 files in other folders)
